<resources>
    <string name="app_name">ChatAppFirebase</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="this_is_main_page">This is main page</string>
    <string name="logout">Logout</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_chat_app">Welcome to chat app</string>
    <string name="already_have_account">Already have Account</string>
    <string name="need_a_new_account">need a new account?</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_chat_app">Hi there,I\'m using chat App</string>

</resources>
